# templates

templates/python/: AGENTS.md  README.md  pyproject.toml
